fix for safari .wrap height

--- a/sites/all/themes/moo/assets/scss/style.scss
+++ b/sites/all/themes/moo/assets/scss/style.scss
@@ -26,7 +26,7 @@ html, body {
 }
 .wrap {
   height: 100%;
-  min-height: 100%;
+  min-height: 1000px;
   margin: 0 auto -416px; /* the bottom margin is the negative value of the footer's height */
 }
 body {
